--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Grocery List</title>
   <link rel="stylesheet" href="css/styles.css">
   <link href='https://fonts.googleapis.com/css?family=Clicker+Script' rel='stylesheet' type='text/css'>  
-  <link href='https://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>  
+  <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>  
 </head>
 <body>
   <script src="js/app.js"></script>
@@ -15,10 +15,10 @@
   <section class='main'>
     <input type='text' class='new-item' placeholder='Add something...'>
     <ul class='items'>
-        <li><input type='checkbox' class='item' name='item-1'>Apples</input></li>
-        <li><input type='checkbox' class='item' name='item-2'>Peanut butter</input></li>
-        <li><input type='checkbox' class='item' name='item-3'>Chicken</input></li>
-        <li><input type='checkbox' class='item' name='item-4'>Tea</input></li>
+        <li><input type='checkbox' class='item' name='item-1' /><label for='item-1'>Apples</label></li>
+        <li><input type='checkbox' class='item' name='item-2'/ ><label for='item-2'>Peanut butter</label></li>
+        <li><input type='checkbox' class='item' name='item-3'/ ><label for='item-3'>Chicken</label></li>
+        <li><input type='checkbox' class='item' name='item-4'/ ><label for='item-4'>Tea</label></li>
     </ul>
   </section>
 </body>
